# GML

./: .gitignore  GNN.ipynb  GNN.sh  GNN_test.ipynb  README.md  bdtopo.txt  carto_dmon_3p.py  download_DU.ipynb  gnnf.ipynb  main.py  optuna_dmon3p.db  optuna_dmon3p_25112025.db  optuna_polygon.db  optuna_run.py  optuna_runV2.py  pyproject.toml
.ipynb_checkpoints/: .gitignore-checkpoint  GNN-checkpoint.ipynb  download_DU-checkpoint.ipynb  gnnf-checkpoint.ipynb  pyproject-checkpoint.toml
src/: dmon3p.py  downloads.py  heads.py  hetero.py  io.py  train_tripartite.py  utils.old  utils.py  utils_tripartite.py
src/.ipynb_checkpoints/: hetero-checkpoint.py  utils-checkpoint.py
src/fetch_data/: 01_fetch_data.py  02_create_intrants.py  03_build_graph_from_intrants.py
src/gml/: config.py  training.py
src/gml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gml/data/: intrants.py
src/gml/features/: addresses.py  buildings.py  parcels.py  shape.py
src/gml/graph/: adjacency.py  build.py
src/gml/io/: duckdb_s3.py  paths.py
src/gml/model/: utils.py
src/gml/pipeline/: fetch.py  graph.py  infer.py  intrants.py  optuna.py  train.py
src/gml/train/: dataset.py  train_tripartite.py  utils.py
