[project]
name = "gml"
version = "0.5.0"
description = "Graph Machine Learning on Geographic Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "community>=1.0.0b1",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "hdbscan>=0.8.40",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch==2.5.0",
    "torch-geometric>=2.6.1",
    "hdbscan>=0.8.40",
    "scipy>=1.16.2",
    "optuna>=4.5.0",
    "matplotlib>=3.10.7",
    "black>=25.11.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "bs4>=0.0.2",
    "duckdb>=1.4.3",
    "boto3>=1.42.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]